--- a/packages/repo-patient/本机生产环境部署.md
+++ b/packages/repo-patient/本机生产环境部署.md
@@ -20,13 +20,44 @@
        例如 /Users/lucinyan/JiuZhouTong/hospital_p_h5/dist
        2 安装 Nginx
        
+       
+----- 
 - ##### 部署 Step 1
-添加 Nginx 配置文件
+添加 Nginx 配置文件「已配置: Https, Gzip, Service Worker, Cross Site」
 ```nginx
 server {
 	listen 443 ssl;
 	server_name devpatient.hp.aijiayi.com;
+
+
+    ###
+    # Gzip
+    ###
+
+    ## 静态压缩
+    gzip_static on;  
+
+    ## 找不到预压缩文件，进行动态压缩  
+    gzip on;   
+    gzip_min_length 1000;  
+    gzip_buffers 4 16k;  
+    gzip_comp_level 5;  
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
+
+    ## gzip公共配置  
+    gzip_http_version 1.1;
+    gzip_proxied expired no-cache no-store private auth;  
+
+    ## 对于ie有个bug，响应vary头后将不会缓存请求，每次都会重新发新的请求。所以，对于ie 1-6直接禁用gzip。  
+    gzip_disable "MSIE [1-6]\.";
+    ## 开启Http Vary头，vary头主要提供给代理服务器使用，根据Vary头做不同的处理。例如，对于支持gzip的请求反向代理缓存服务器将返回gzip内容，不支持gzip的客户端返回原始内容。  
+    gzip_vary on;  
+
 	
+    ###
+    # SSL
+    ###
+
     ## [必须!] ssl 证书
 	ssl_certificate   cert/devpatient.hp.aijiayi.com.pem;
 	ssl_certificate_key  cert/devpatient.hp.aijiayi.com.key;
@@ -35,17 +66,40 @@ server {
 	ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_prefer_server_ciphers on;
+
 	
-    ## [需修改!] 根据具体项目目录替换以下路径
-	root   		/Users/lucinyan/JiuZhouTong/hospital_p_h5/dist;
-	
-	index  		index.php index.html;
-	
+    ###
+    # Cross Site
+    ###
+
     add_header Access-Control-Allow-Origin *;
     add_header Access-Control-Allow-Methods *;
     add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,access-token,devicetype,channelid,nethospitalid';
 
+
+    ## [需修改!] 根据具体项目目录替换以下路径
+	root   		/Users/lucinyan/JiuZhouTong/hospital_p_h5/dist;
 	
+	index  		index.php index.html;
+
+    
+    ## Service Worker
+    location = /service-worker.js {
+        root /Users/lucinyan/JiuZhouTong/hospital_p_h5/dist;
+    }
+
+    # location ^~ /h5/static/ {
+    #     rewrite ^/h5/(.+?).(js|css|png|jpg)$ /$1.$2 break;
+    # }
+
+    location ^~ /h5 {
+        alias /Users/lucinyan/JiuZhouTong/hospital_p_h5/dist/;
+
+        try_files $uri $uri/ /index.html last;
+        index  index.html index.htm;
+    }
+
+    ## 映射到后端
     location / {
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -59,15 +113,6 @@ server {
         index  index.jsp index.html index.htm index.php;
     }
 
-    location ^~ /h5/static/ {
-        rewrite ^/h5/(.+?).(js|css|png|jpg)$ /$1.$2 break;
-    }
-
-    location ^~ /h5 {
-        try_files $uri $uri/ /index.html last;
-        index  index.html index.htm;
-    }
-
     ## [需修改! 也可以屏蔽以下两行] 根据具体项目目录替换以下两行路径
     access_log /Users/lucinyan/Log/nginx/aijiayi.com.log;
     error_log  /Users/lucinyan/Log/nginx/aijiayi.com-error.log error;
@@ -78,6 +123,7 @@ upstream aijiayi_api_cluster {
     server 114.116.191.172:443;
     keepalive 16;
 }
+
 
 ``` 
 
