--- a/packages/repo-patient/本机生产环境部署.md
+++ b/packages/repo-patient/本机生产环境部署.md
@@ -93,10 +93,10 @@ server {
     # }
 
     location ^~ /h5 {
+        ## alias 使用时 注意带上最后的 /
         alias /Users/lucinyan/JiuZhouTong/hospital_p_h5/dist/;
 
         try_files $uri $uri/ /index.html last;
-        index  index.html index.htm;
     }
 
     ## 映射到后端
@@ -109,8 +109,6 @@ server {
         proxy_pass       https://aijiayi_api_cluster/;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        index  index.jsp index.html index.htm index.php;
     }
 
     ## [需修改! 也可以屏蔽以下两行] 根据具体项目目录替换以下两行路径
@@ -123,7 +121,6 @@ upstream aijiayi_api_cluster {
     server 114.116.191.172:443;
     keepalive 16;
 }
-
 
 ``` 
 
